2009-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* apt: add gecko's bindist mirror

2008-11-29  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.28.6.1 of fink-mirrors

2008-11-21  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* sourceforge: fix the sf mirrors

2008-09-16  Dave Morrison  <drm@finkproject.org>

	* master, rsync: disable nonfunctioning mirrors
	* VERSION: releasing version 0.28.5.3 of fink-mirrors

2008-08-29  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.28.5.2 of fink-mirrors

2008-08-26  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* master, rsync: added new .no mirror

2008-07-09  Dave Morrison  <drm@finkproject.org>

	* Removed broken Belgian mirrors (master and rsync)
	* VERSION: releasing version 0.28.5.1 of fink-mirrors

2008-06-24  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Added german distfiles mirror.

2008-06-23  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.28.3.1 of fink-mirrors

2008-03-24  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Added german finkinfo mirror.  Owner is fink-mirror@ig42.org (gecko2)

2008-03-23  Darian Lanx <dmalloc@users.sourceforge.net>

	* Added Nantes Frech distfiles and rsync mirror. Owner is Cédric QUILLEVERE <origin@killy.net>

2008-02-01  Darian Lanx <dmalloc@users.sourceforge.net>

	* Removed the mirror in Portugal as it is dead. No maintainer could be reachd

2008-01-26  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* apt, master, rsync: added sjc.ca.us mirror (macosforge), also set it
	as master.  ;)

2008-01-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* apt, master, rsync: added proper msn.wi.us mirror, marked it as master

2008-01-12  Daniel Macks  <dmacks@netspace.org>

	* rsync: remove some dead ones (confirm martinm on fink-core 09Oct07


2007-10-16  Daniel Macks  <dmacks@netspace.org>

	* COPYING, inject.pl, install.sh, postinstall.pl.in: Update FSF street address.