@@ -1,3 +1,7 @@
+2009-03-07  Dave Morrison  <drm@finkproject.org>
+
+	* all: updated Copyright notice
+
 2009-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* apt: add gecko's bindist mirror
